--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -3,18 +3,45 @@
   <head>
     <meta charset="utf-8">
     <title>tdd todo</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style/style.css">
+    <script type="text/javascript" src = "./js/logic.js"></script>
+    <script type="text/javascript" src = "./js/dom.js"></script>
+
   </head>
+
+
+
   <body>
-    <div id = "todo-container">
-        <ul>
-        </ul>
+    <div class ="Header">
+
+      ZooVisit
+
     </div>
-    <form id="add-todo">
-      <input type="text" name="description" value="">
-      <input type="submit" name="" value="Submit">
-    </form>
+    <div id = "todo-container">
+        
+        <form id="add-todo">
+          <input type="text" name="description" value="">
+          <input type="submit" name="" value="Submit">
+        </form>
+
+    </div>
+  
+
+
+
+
+
+
   </body>
-  <script type="text/javascript" src = "./logic.js"></script>
-  <script type="text/javascript" src = "./dom.js"></script>
+
+
+
+
+
+
+
+
+
+
+
 </html>
