--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>tdd todo</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href=".style/style.css">
   </head>
   <body>
     <div id = "todo-container">
@@ -11,10 +11,10 @@
         </ul>
     </div>
     <form id="add-todo">
-      <input type="text" name="description" value="">
-      <input type="submit" name="" value="Submit">
+      <input type="text" id ="inPutVal"name="description" value="">
+      <input type="submit" name="" value="Add" onclick="createTodoNode()">
     </form>
   </body>
-  <script type="text/javascript" src = "./logic.js"></script>
-  <script type="text/javascript" src = "./dom.js"></script>
+  <script type="text/javascript" src = ".js/logic.js"></script>
+  <script type="text/javascript" src = ".js/dom.js"></script>
 </html>
