--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -10,28 +10,44 @@
   </head>
 
 
-
   <body>
-    <div class ="Header">
 
-      ZooVisit
+    <div class="mainBody">
+
+
+
+      <div class ="Header">
+
+        ZooVisit
+
+      </div>
+      <div id = "todo-container">
+        <p style="padding-left:90px">My visiting List</p>
+        <hr>
+        <hr>
+          <form id="add-todo">
+            <label id = "AnimalLabel"> Please type your animals 
+            </label>
+            <input id = "Animalinput" type="text" name="description" value="" placeholder="Please enter your visited animal">
+            <button>Add</button>
+          </form>
+      </div>
+
+      <div class= "Left-Side">
+
+
+      </div>
+
+      <div class= "Right-Side">
+
+
+      </div>
+
+      
+
+
 
     </div>
-    <div id = "todo-container">
-        
-        <form id="add-todo">
-          <input type="text" name="description" value="">
-          <input type="submit" name="" value="Submit">
-        </form>
-
-    </div>
-  
-
-
-
-
-
-
   </body>
 
 
