--- a/skeleton/index.html
+++ b/skeleton/index.html
@@ -2,62 +2,22 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>tdd todo</title>
+    <title>ZOOVISIT</title>
     <link rel="stylesheet" href="./style/style.css">
-    <script type="text/javascript" src = "./js/logic.js"></script>
-    <script type="text/javascript" src = "./js/dom.js"></script>
-
+    
   </head>
-
-
   <body>
 
-    <div class="mainBody">
-
-
-
-      <div class ="Header">
-
-        ZooVisit
-
-      </div>
-      <div id = "todo-container">
-        <p style="padding-left:90px">My visiting List</p>
-        <hr>
-        <hr>
-          <form id="add-todo">
-            <label id = "AnimalLabel"> Please type your animals 
-            </label>
-            <input id = "Animalinput" type="text" name="description" value="" placeholder="Please enter your visited animal">
-            <button>Add</button>
-          </form>
-      </div>
-
-      <div class= "Left-Side">
-
-
-      </div>
-
-      <div class= "Right-Side">
-
-
-      </div>
-
-      
-
-
-
+    <h>WELCOME to ZOOVISIT</h>
+    <div id = "todo-container">
     </div>
+    <form id="add-todo">
+      <input type="text" id="inputid" name="description" value="">
+      <input type="submit" name="" value="Submit">
+ <!--- <span onclick="newElement()" class="addBtn">Add</span>!--->
+
+    </form>
   </body>
-
-
-
-
-
-
-
-
-
-
-
+  <script type="text/javascript" src = "./js/logic.js"></script>
+  <script type="text/javascript" src = "./js/dom.js"></script>
 </html>
